...
        android:layout_marginBottom="70dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/detailsDeleteButton"
        android:layout_alignTop="@+id/updateStartTimeButton"
        android:layout_toEndOf="@+id/updateStartTimeButton"
        android:layout_marginStart="48dp" />

    <TextView
        android:layout_width="wrap_content"
...
