<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.helper.groupa.studenthelper.setGPAActivity">
    <EditText
        android:id="@+id/setGPAEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Input GPA"/>
    <Button
        android:id="@+id/saveGPAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"/>

</LinearLayout>
