...
    tools:context="com.helper.groupa.studenthelper.AddSemesterGPAActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/semesterTitleTextEdit"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:maxLength="25"
        android:hint="Set Semester Title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/setGPAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set GPA"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/OrTextView"
...
