...
        android:layout_below="@id/gpaTextViewLayout"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Semester"
            android:id="@+id/addSemesterButton"
            android:layout_marginTop="28dp"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
...
